@@ -6285,11 +6285,6 @@ sub macro_define ($$$$$$)
     }
   $var_type{$var}{$cond} = $type;
 
-  # When adding, since we rewrite, don't try to preserve the
-  # Automake continuation backslashes.
-  $value =~ s/\\$//mg
-    if $type eq '+' && $owner == VAR_AUTOMAKE;
-
   # Differentiate assignment types.
 
   # 1. append (+=) to a variable defined for current condition
@@ -7133,6 +7128,10 @@ sub variable_pretty_output ($@)
 	{
 	  $output_vars .= $var_comment{$var}{$cond};
 	}
+
+      # Suppress escaped new lines.  &pretty_print_internal will
+      # add them back, maybe at other places.
+      $val =~ s/\\$//mg;
 
       my $val = $var_value{$var}{$cond};
       my $equals = $var_type{$var}{$cond} eq ':' ? ':=' : '=';
