@@ -1,3 +1,13 @@
+2002-12-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (macro_define): Do not strip escaped new lines
+	in Automake's +='ed variables.  We don't know whether it will
+	be pretty printed or not at this point.
+	(variable_pretty_output): Do this here.
+	* tests/pluseq10.test: New file.
+	* tests/Makefile.am (TESTS): Add pluseq10.test.
+	Reported by Ralf Corsepius.
+
 2002-12-02  Charles Wilson  <cwilson@ece.gatech.edu>
 
 	* tests/gnits3.test (AM_INSTALLCHECK_STD_OPTIONS_EXEMPT):
